# haskell-opencv

./: .gitignore  .travis.yml  Dockerfile.lts-10.2-opencv  LICENSE  Makefile  README.md  Setup.hs  build.sh  cabal.config  default.nix  fetchNixpkgs.nix  haskell-opencv.nix  index.html  nixpkgs-config.nix  nixpkgs-version.nix  nixpkgs.nix  opencv-3.1.0.nix  opencv-3.2.0.nix  opencv-HEAD.nix  opencv-default.nix  opencv.cabal  overlay.nix  params.json  shell.nix  stack.yaml  test.py  thea.cabal  trampoline.sh  travis-build-opencv
bench/: bench.hs
doc/: ExampleExtractor.hs  OpenCV-Calib3d.html  OpenCV-Core-ArrayOps.html  OpenCV-Core-Types-Mat-HMat.html  OpenCV-Core-Types-Mat-Repa.html  OpenCV-Core-Types-Mat.html  OpenCV-Core-Types-Matx.html  OpenCV-Core-Types-Point.html  OpenCV-Core-Types-Rect.html  OpenCV-Core-Types-Size.html  OpenCV-Core-Types-Vec.html  OpenCV-Core-Types.html  OpenCV-Core.html  OpenCV-Exception.html  OpenCV-Features2d.html  OpenCV-HighGui.html  OpenCV-ImgCodecs.html  OpenCV-ImgProc-CascadeClassifier.html  OpenCV-ImgProc-ColorMaps.html  OpenCV-ImgProc-Drawing.html  OpenCV-ImgProc-FeatureDetection.html  OpenCV-ImgProc-GeometricImgTransform.html  OpenCV-ImgProc-ImgFiltering.html  OpenCV-ImgProc-MiscImgTransform-ColorCodes.html  OpenCV-ImgProc-MiscImgTransform.html  OpenCV-ImgProc-ObjectDetection.html  OpenCV-ImgProc-StructuralAnalysis.html  OpenCV-ImgProc-Types.html  OpenCV-Internal-C-Inline.html  OpenCV-Internal-C-PlacementNew-TH.html  OpenCV-Internal-C-PlacementNew.html  OpenCV-Internal-C-Types.html  OpenCV-Internal-Calib3d-Constants.html  OpenCV-Internal-Core-ArrayOps.html  OpenCV-Internal-Core-Types-Constants.html  OpenCV-Internal-Core-Types-Mat-Depth.html  OpenCV-Internal-Core-Types-Mat-Marshal.html  OpenCV-Internal-Core-Types-Mat-ToFrom.html  OpenCV-Internal-Core-Types-Mat.html  OpenCV-Internal-Core-Types-Matx-TH.html  (+132 more)
doc/opencv/: OpenCV-Calib3d.html  OpenCV-Core-Types-Mat-Repa.html  OpenCV-Core-Types-Mat.html  OpenCV-Core-Types-Matx.html  OpenCV-Core-Types-Size.html  OpenCV-ImgProc-ColorMaps.html  OpenCV-ImgProc-FeatureDetection.html  OpenCV-ImgProc-MiscImgTransform.html  OpenCV-ImgProc-ObjectDetection.html  OpenCV-ImgProc-Types.html  OpenCV-Video-MotionAnalysis.html  doc-index-B.html  doc-index-D.html  doc-index-E.html  doc-index-I.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-W.html  doc-index-X.html  doc-index-Z.html  mini_OpenCV-Core-Types-Mat-Repa.html  mini_OpenCV-Core-Types-Mat.html  mini_OpenCV-Core-Types-Matx.html  mini_OpenCV-Features2d.html  mini_OpenCV-ImgProc-Drawing.html  mini_OpenCV-ImgProc-FeatureDetection.html  mini_OpenCV-Video-MotionAnalysis.html  mini_OpenCV-Video.html  opencv.haddock
doc/src/: OpenCV-C-Inline.html  OpenCV-C-PlacementNew-TH.html  OpenCV-C-PlacementNew.html  OpenCV-C-Types.html  OpenCV-Calib3d-Constants.html  OpenCV-Calib3d.html  OpenCV-Core-ArrayOps.html  OpenCV-Core-Types-Internal.html  OpenCV-Core-Types-Mat-Depth.html  OpenCV-Core-Types-Mat-HMat.html  OpenCV-Core-Types-Mat-Internal.html  OpenCV-Core-Types-Mat-Marshal.html  OpenCV-Core-Types-Mat-Repa.html  OpenCV-Core-Types-Mat-ToFrom.html  OpenCV-Core-Types-Mat.html  OpenCV-Core-Types-Matx-Internal.html  OpenCV-Core-Types-Matx-TH.html  OpenCV-Core-Types-Matx.html  OpenCV-Core-Types-Point-Internal.html  OpenCV-Core-Types-Point-TH.html  OpenCV-Core-Types-Point.html  OpenCV-Core-Types-Rect-Internal.html  OpenCV-Core-Types-Rect-TH.html  OpenCV-Core-Types-Rect.html  OpenCV-Core-Types-Size-Internal.html  OpenCV-Core-Types-Size-TH.html  OpenCV-Core-Types-Size.html  OpenCV-Core-Types-Vec-Internal.html  OpenCV-Core-Types-Vec-TH.html  OpenCV-Core-Types-Vec.html  OpenCV-Core-Types.html  OpenCV-Core.html  OpenCV-Exception-Internal.html  OpenCV-Exception.html  OpenCV-Features2d.html  OpenCV-HighGui.html  OpenCV-ImgCodecs-Internal.html  OpenCV-ImgCodecs.html  OpenCV-ImgProc-CascadeClassifier.html  OpenCV-ImgProc-ColorMaps.html  (+54 more)
examples/: default.nix  munihac1  munihac2  munihac3  munihac4  munihac5  munihac6  munihac7  opencv-examples.cabal  opencv-examples.nix  shell.nix
examples/lib/OpenCV/: Example.hs
examples/src/: face-detect.hs  highgui.hs  munihac.hs  munihac1.hs  munihac2.hs  munihac3.hs  munihac4.hs  munihac5.hs  munihac6.hs  munihac7.hs  videoio-background-sub.hs  videoio-decolor.hs  videoio-noise-multi.hs  videoio.hs
hpc/: hpc_index.html  hpc_index_alt.html  hpc_index_exp.html  hpc_index_fun.html
hpc/openc_I07Kiwoa5Yf5z6DcdBEr1r/: OpenCV.Core.ArrayOps.hs.html  OpenCV.Core.Types.Mat.HMat.hs.html  OpenCV.Core.Types.hs.html  OpenCV.ImgProc.ColorMaps.hs.html  OpenCV.ImgProc.Drawing.hs.html  (+15 more)
include/: macros.hpp  namespace.hpp  orb.hpp  termcriteria.hpp  video_motion_analysis.hpp  video_motion_analysis_bgsegm.hpp
nix/: sources.json
opencv/: .ghci  CHANGELOG.md  Makefile  Setup.hs  default.nix  opencv.cabal  opencv.nix
opencv-examples/: default.nix  opencv-examples.cabal  opencv-examples.nix
opencv-examples/lib/OpenCV/: Example.hs
opencv-examples/src/: face-detect.hs  highgui.hs  videoio-bilateral.hs  videoio-decolor.hs
opencv-extra/: .ghci  CHANGELOG.md  Makefile  Setup.hs  default.nix  opencv-extra.cabal  opencv-extra.nix
opencv-extra-examples/: default.nix  opencv-extra-examples.cabal  opencv-extra-examples.nix
opencv-extra-examples/src/: tracker.hs
opencv-extra/examples/: default.nix  opencv-extra-examples.cabal  opencv-extra-examples.nix  stack.yaml
opencv-extra/examples/src/: tracker.hs
opencv-extra/include/: aruco-namespace.hpp  aruco.hpp  bgsegm.hpp  tracking.hpp  white-ballance.hpp  ximgproc-namespace.hpp
opencv-extra/include/xfeatures/: sift.hpp  surf.hpp
opencv-extra/src/OpenCV/: Extra.hs
opencv-extra/src/OpenCV/Extra/: ArUco.hs  ArUco.hsc  Bgsegm.hs  Tracking.hs  XFeatures2d.hs  XImgProc.hs  XPhoto.hs
opencv-extra/src/OpenCV/Extra/Internal/C/: Inline.hs  Types.hs
opencv-extra/src/OpenCV/Extra/Internal/XImgProc/: Constants.hsc
opencv-extra/src/OpenCV/Extra/XPhoto/: WhiteBalancer.hs
src/: OpenCV.hs  thea.hs
test/: test.hs
(+347 files in other folders)
