name:          opencv
version:       0.0.0
homepage:      https://github.com/LumiGuide/haskell-opencv
license:       BSD3
license-file:  LICENSE
author:        Roel van Dijk <roel@lambdacube.nl>, Bas van Dijk <v.dijk.bas@gmail.com>
maintainer:    Roel van Dijk <roel@lambdacube.nl>, Bas van Dijk <v.dijk.bas@gmail.com>
build-type:    Simple
cabal-version: >=1.10

extra-source-files:
    data/*.png
    data/*.jpg
extra-doc-files:
    doc/generated/*.png
    doc/generated/examples/*.png

library
  hs-source-dirs: src
  include-dirs: include
  c-sources: src/OpenCV/Calib3d.cpp
           , src/OpenCV/C/PlacementNew.cpp
           , src/OpenCV/Core/ArrayOps.cpp
           , src/OpenCV/Core/Types.cpp
           , src/OpenCV/Core/Types/Internal.cpp
           , src/OpenCV/Core/Types/Mat.cpp
           , src/OpenCV/Core/Types/Mat/Internal.cpp
           , src/OpenCV/Core/Types/Mat/Repa.cpp
           , src/OpenCV/Exception/Internal.cpp
           , src/OpenCV/Features2d.cpp
           , src/OpenCV/HighGui.cpp
           , src/OpenCV/ImgCodecs.cpp
           , src/OpenCV/ImgProc/ColorMaps.cpp
           , src/OpenCV/ImgProc/Drawing.cpp
           , src/OpenCV/ImgProc/GeometricImgTransform.cpp
           , src/OpenCV/ImgProc/ImgFiltering.cpp
           , src/OpenCV/ImgProc/MiscImgTransform.cpp
           , src/OpenCV/ImgProc/ObjectDetection.cpp
           , src/OpenCV/ImgProc/StructuralAnalysis.cpp
           , src/OpenCV/Video.cpp
           , src/OpenCV/Video/MotionAnalysis.cpp

  cc-options: -Wall -O2 -std=c++11
  ghc-options: -Wall -fwarn-incomplete-patterns -threaded -funbox-strict-fields -O2 -rtsopts

  build-depends: aeson
               , base >=4.8 && <5
               , base64-bytestring
               , bindings-DSL
               , bytestring
               , containers
               , deepseq
               , inline-c
               , inline-c-cpp
               , linear
               , primitive
               , repa
               , template-haskell
               , text
               , transformers
               , vector

  exposed-modules: OpenCV
                 , OpenCV.Calib3d
                 , OpenCV.Core
                 , OpenCV.Core.ArrayOps
                 , OpenCV.Core.Types
                 , OpenCV.Core.Types.Mat
                 , OpenCV.Core.Types.Mat.HMat
                 , OpenCV.Core.Types.Mat.Repa
                 , OpenCV.Exception
                 , OpenCV.Features2d
                 , OpenCV.HighGui
                 , OpenCV.ImgCodecs
                 , OpenCV.ImgProc.ImgFiltering
                 , OpenCV.ImgProc.GeometricImgTransform
                 , OpenCV.ImgProc.MiscImgTransform
                 , OpenCV.ImgProc.Drawing
                 , OpenCV.ImgProc.ColorMaps
                 , OpenCV.ImgProc.StructuralAnalysis
                 , OpenCV.ImgProc.ObjectDetection
                 , OpenCV.ImgProc.Types
                 , OpenCV.JSON
                 , OpenCV.TypeLevel
                 , OpenCV.Unsafe
                 , OpenCV.Video
                 , OpenCV.Video.MotionAnalysis
  other-modules:   OpenCV.Calib3d.Constants
                 , OpenCV.Core.ArrayOps.Internal
                 , OpenCV.Core.Types.Constants
                 , OpenCV.Core.Types.Internal
                 , OpenCV.Core.Types.Mat.Depth
                 , OpenCV.Core.Types.Mat.Internal
                 , OpenCV.C.Inline
                 , OpenCV.C.PlacementNew
                 , OpenCV.C.Types
                 , OpenCV.Exception.Internal
                 , OpenCV.ImgCodecs.Internal
                 , OpenCV.ImgProc.MiscImgTransform.Internal
                 , OpenCV.ImgProc.Types.Internal
                 , OpenCV.Internal

  default-extensions: BangPatterns
                    , DataKinds
                    , FlexibleContexts
                    , FlexibleInstances
                    , LambdaCase
                    , OverloadedStrings
                    , PackageImports
                    , PolyKinds
                    , ScopedTypeVariables
                    , TupleSections
                    , TypeFamilies
                    , TypeOperators

  default-language:   Haskell2010
  pkgconfig-depends:  opencv

test-suite opencv-doc-images
  type: exitcode-stdio-1.0
  hs-source-dirs: doc
  main-is: images.hs
  default-language: Haskell2010
  ghc-options: -Wall -fwarn-incomplete-patterns -threaded -funbox-strict-fields -O2 -rtsopts
  build-depends: base >= 4.8 && < 5
               , bytestring
               , containers
               , directory
               , Glob
               , haskell-src-exts
               , linear
               , opencv
               , primitive
               , template-haskell
               , text
               , transformers
               , vector

  default-extensions: BangPatterns
                    , DataKinds
                    , LambdaCase
                    , OverloadedStrings
                    , PackageImports
                    , PolyKinds
                    , ScopedTypeVariables
                    , TupleSections
                    , TypeFamilies
                    , TypeOperators

test-suite test-opencv
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          test.hs
  default-language: Haskell2010
  ghc-options:      -Wall -fwarn-incomplete-patterns -threaded -funbox-strict-fields -O2 -rtsopts
  build-depends: base >= 4.8 && < 5
               , bytestring
               , lens
               , linear
               , opencv
               , QuickCheck
               , repa
               , tasty
               , tasty-hunit
               , tasty-quickcheck
               , transformers
               , vector

  default-extensions: DataKinds
                    , FlexibleContexts
                    , PackageImports
                    , RankNTypes
                    , ScopedTypeVariables
                    , TypeOperators

benchmark bench-opencv
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench
  main-is:          bench.hs
  default-language: Haskell2010
  ghc-options: -Wall -fwarn-incomplete-patterns -threaded -funbox-strict-fields -O2 -rtsopts
  build-depends:    base >= 4.8 && < 5
                  , bytestring
                  , criterion
                  , opencv
                  , repa

  default-extensions: DataKinds
                    , PackageImports
