name:          thea
version:       0.0.0
homepage:      lumiguide.eu
license:       AllRightsReserved
author:        Roel van Dijk <roel@lambdacube.nl>, Bas van Dijk <v.dijk.bas@gmail.com>
maintainer:    Roel van Dijk <roel@lambdacube.nl>
build-type:    Simple
cabal-version: >=1.10

library
  hs-source-dirs: src
  include-dirs: include
  c-sources: src/OpenCV/Internal.cpp

           , src/OpenCV/Core.cpp
           , src/OpenCV/ImgProc.cpp
           , src/OpenCV/ImgCodecs.cpp
           , src/OpenCV/HighGui.cpp
           , src/OpenCV/Video.cpp

  cc-options: -Wall -O2 -std=c++11
  ghc-options: -Wall -threaded -funbox-strict-fields -O2 -rtsopts

  build-depends: base >=4.8 && <5
               , bindings-DSL
               , bytestring
               , containers
               , inline-c
               , inline-c-cpp
               , lens
               , linear
               , lumi-hackage-extended
               , primitive
               , template-haskell
               , text
               , vector

  exposed-modules: OpenCV
                 , OpenCV.Core
                 , OpenCV.Unsafe
                 , OpenCV.ImgProc
                 , OpenCV.ImgCodecs
                 , OpenCV.HighGui
                 , OpenCV.Video
  other-modules:   OpenCV.Internal
                 , Language.C.Inline.OpenCV

  default-extensions: ScopedTypeVariables
                    , PackageImports
                    , OverloadedStrings
                    , OverloadedLists
                    , NoImplicitPrelude
                    , BangPatterns
                    , LambdaCase
                    , TupleSections
  default-language:   Haskell2010
  pkgconfig-depends:  opencv
