name:          thea
version:       0.0.0
homepage:      lumiguide.eu
license:       AllRightsReserved
author:        Roel van Dijk <roel@lambdacube.nl>, Bas van Dijk <v.dijk.bas@gmail.com>
maintainer:    Roel van Dijk <roel@lambdacube.nl>, Bas van Dijk <v.dijk.bas@gmail.com>
build-type:    Simple
cabal-version: >=1.10
data-files:    data/*.png

library
  hs-source-dirs: src
  include-dirs: include
  c-sources: src/OpenCV/Internal.cpp

           , src/OpenCV/Core.cpp
           , src/OpenCV/ImgProc.cpp
           , src/OpenCV/ImgCodecs.cpp
           , src/OpenCV/HighGui.cpp
           , src/OpenCV/Video.cpp

  cc-options: -Wall -O2 -std=c++11
  ghc-options: -Wall -threaded -funbox-strict-fields -O2 -rtsopts

  build-depends: base >=4.8 && <5
               , bindings-DSL
               , bytestring
               , containers
               , inline-c
               , inline-c-cpp
               , lens
               , linear
               , lumi-hackage-extended
               , primitive
               , repa
               , template-haskell
               , text
               , vector

  exposed-modules: OpenCV
                 , OpenCV.Core
                 , OpenCV.Unsafe
                 , OpenCV.ImgProc
                 , OpenCV.ImgCodecs
                 , OpenCV.HighGui
                 , OpenCV.Video
  other-modules:   OpenCV.Internal
                 , Language.C.Inline.OpenCV

  default-extensions: ScopedTypeVariables
                    , PackageImports
                    , OverloadedStrings
                    , OverloadedLists
                    , NoImplicitPrelude
                    , BangPatterns
                    , LambdaCase
                    , TupleSections
  default-language:   Haskell2010
  pkgconfig-depends:  opencv

test-suite test-thea
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          test.hs
  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends: thea
               , base >= 4.8 && < 5
               , bytestring
               , lumi-hackage-extended
               , repa
               , tasty
               , tasty-hunit
               , tasty-quickcheck
               , QuickCheck
               , lens
               , linear

benchmark bench-thea
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench
  main-is:          bench.hs
  default-language: Haskell2010
  ghc-options:      -O2
  build-depends:    thea
                  , base >= 4.8   && < 5
                  , criterion
