name:          thea
version:       0.0.0
homepage:      lumiguide.eu
license:       AllRightsReserved
author:        Roel van Dijk <roel@lambdacube.nl>, Bas van Dijk <v.dijk.bas@gmail.com>
maintainer:    Roel van Dijk <roel@lambdacube.nl>, Bas van Dijk <v.dijk.bas@gmail.com>
build-type:    Simple
cabal-version: >=1.10

extra-source-files:
    data/*.png
    data/*.jpg
extra-doc-files:
    doc/generated/*.png
    doc/generated/examples/*.png

library
  hs-source-dirs: src
  include-dirs: include
  c-sources: src/OpenCV/Internal.cpp

           , src/OpenCV/Core/Types.cpp
           , src/OpenCV/Core/Types/Internal.cpp
           , src/OpenCV/Core/Types/Mat.cpp
           , src/OpenCV/Core/Types/Mat/Internal.cpp
           , src/OpenCV/Core/Types/Mat/Repa.cpp
           , src/OpenCV/Core/ArrayOps.cpp
           , src/OpenCV/ImgProc/ImgFiltering.cpp
           , src/OpenCV/ImgProc/GeometricImgTransform.cpp
           , src/OpenCV/ImgProc/MiscImgTransform.cpp
           , src/OpenCV/ImgProc/Drawing.cpp
           , src/OpenCV/ImgProc/ColorMaps.cpp
           , src/OpenCV/ImgProc/StructuralAnalysis.cpp
           , src/OpenCV/ImgProc/ObjectDetection.cpp
           , src/OpenCV/ImgCodecs.cpp
           , src/OpenCV/HighGui.cpp
           , src/OpenCV/Video.cpp

  cc-options: -Wall -O2 -std=c++11
  ghc-options: -Wall -fwarn-incomplete-patterns -threaded -funbox-strict-fields -O2 -rtsopts

  build-depends: aeson
               , base >=4.8 && <5
               , base64-bytestring
               , bindings-DSL
               , bytestring
               , containers
               , deepseq
               , inline-c
               , inline-c-cpp
               , lens
               , linear
               , lumi-hackage-extended
               , primitive
               , repa
               , template-haskell
               , text
               , vector

  exposed-modules: OpenCV
                 , OpenCV.Core
                 , OpenCV.Core.Types
                 , OpenCV.Core.Types.Mat
                 , OpenCV.Core.Types.Mat.HMat
                 , OpenCV.Core.Types.Mat.Repa
                 , OpenCV.Core.ArrayOps
                 , OpenCV.Unsafe
                 , OpenCV.ImgProc.ImgFiltering
                 , OpenCV.ImgProc.GeometricImgTransform
                 , OpenCV.ImgProc.MiscImgTransform
                 , OpenCV.ImgProc.Drawing
                 , OpenCV.ImgProc.ColorMaps
                 , OpenCV.ImgProc.StructuralAnalysis
                 , OpenCV.ImgProc.ObjectDetection
                 , OpenCV.ImgProc.Types
                 , OpenCV.ImgCodecs
                 , OpenCV.HighGui
                 , OpenCV.Video
                 , OpenCV.TypeLevel
                 , OpenCV.JSON
  other-modules:   OpenCV.Internal
                 , OpenCV.Core.ArrayOps.Internal
                 , OpenCV.Core.Types.Internal
                 , OpenCV.Core.Types.Mat.Internal
                 , OpenCV.ImgProc.Types.Internal
                 , OpenCV.ImgProc.MiscImgTransform.ColorCodes
                 , OpenCV.ImgCodecs.Internal
                 , Language.C.Inline.OpenCV

  default-extensions: BangPatterns
                    , DataKinds
                    , FlexibleContexts
                    , LambdaCase
                    , NoImplicitPrelude
                    , OverloadedStrings
                    , PackageImports
                    , PolyKinds
                    , ScopedTypeVariables
                    , TupleSections
                    , TypeFamilies
                    , TypeOperators

  default-language:   Haskell2010
  pkgconfig-depends:  opencv

test-suite thea-doc-images
  type: exitcode-stdio-1.0
  hs-source-dirs: doc
  main-is: images.hs
  default-language: Haskell2010
  ghc-options: -Wall -fwarn-incomplete-patterns -threaded -funbox-strict-fields -O2 -rtsopts
  build-depends: base >= 4.8 && < 5
               , bytestring
               , directory
               , Glob
               , haskell-src-meta
               , haskell-src-exts
               , linear
               , template-haskell
               , text
               , thea
               , vector

  default-extensions: BangPatterns
                    , DataKinds
                    , LambdaCase
                    , OverloadedStrings
                    , PackageImports
                    , PolyKinds
                    , ScopedTypeVariables
                    , TupleSections
                    , TypeFamilies
                    , TypeOperators

test-suite test-thea
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          test.hs
  default-language: Haskell2010
  ghc-options:      -Wall -fwarn-incomplete-patterns -threaded -funbox-strict-fields -O2 -rtsopts
  build-depends: thea
               , base >= 4.8 && < 5
               , bytestring
               , lumi-hackage-extended
               , repa
               , tasty
               , tasty-hunit
               , tasty-quickcheck
               , QuickCheck
               , lens
               , linear
               , vector

benchmark bench-thea
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench
  main-is:          bench.hs
  default-language: Haskell2010
  ghc-options: -Wall -fwarn-incomplete-patterns -threaded -funbox-strict-fields -O2 -rtsopts
  build-depends:    thea
                  , base >= 4.8 && < 5
                  , bytestring
                  , criterion
                  , repa
                  , lumi-hackage-extended
