name:          opencv-examples
version:       0.0.0
homepage:      lumiguide.eu
license:       BSD3
author:        Roel van Dijk <roel@lambdacube.nl>, Bas van Dijk <v.dijk.bas@gmail.com>
maintainer:    Roel van Dijk <roel@lambdacube.nl>, Bas van Dijk <v.dijk.bas@gmail.com>
build-type:    Simple
cabal-version: >=1.10

extra-source-files:
    data/*.png
    data/*.jpg

executable highgui
  main-is: highgui.hs
  hs-source-dirs: src
  ghc-options: -Wall -O2

  build-depends: base >=4.8 && < 4.10
               , bytestring
               , opencv

  default-language: Haskell2010
