name:          opencv-examples
version:       0.0.0
homepage:      lumiguide.eu
license:       BSD3
author:        Roel van Dijk <roel@lambdacube.nl>, Bas van Dijk <v.dijk.bas@gmail.com>
maintainer:    Roel van Dijk <roel@lambdacube.nl>, Bas van Dijk <v.dijk.bas@gmail.com>
build-type:    Simple
cabal-version: >=1.10

extra-source-files:
    data/*.png
    data/*.jpg

executable highgui
  main-is: highgui.hs
  hs-source-dirs: src
  ghc-options: -Wall -O2

  build-depends: base >=4.8 && < 4.10
               , bytestring
               , opencv

  default-language: Haskell2010

executable videoio
  main-is: videoio.hs
  hs-source-dirs: src
  ghc-options: -Wall -O2

  build-depends: base >=4.8 && < 4.10
               , opencv

executable munihac1
  main-is: munihac1.hs
  hs-source-dirs: src
  ghc-options: -Wall -O2

  build-depends:
     base >=4.8 && < 4.10
   , linear
   , opencv

  default-language: Haskell2010

executable munihac2
  main-is: munihac2.hs
  hs-source-dirs: src
  ghc-options: -Wall -O2

  build-depends:
     base >=4.8 && < 4.10
   , linear
   , opencv

  default-language: Haskell2010

executable munihac3
  main-is: munihac3.hs
  hs-source-dirs: src
  ghc-options: -Wall -O2

  build-depends:
     base >=4.8 && < 4.10
   , linear
   , opencv

  default-language: Haskell2010

executable munihac4
  main-is: munihac4.hs
  hs-source-dirs: src
  ghc-options: -Wall -O2

  build-depends:
     base >=4.8 && < 4.10
   , linear
   , opencv

  default-language: Haskell2010

executable munihac5
  main-is: munihac5.hs
  hs-source-dirs: src
  ghc-options: -Wall -O2

  build-depends:
     base >=4.8 && < 4.10
   , linear
   , opencv

  default-language: Haskell2010

executable munihac6
  main-is: munihac6.hs
  hs-source-dirs: src
  ghc-options: -Wall -O2

  build-depends:
     base >=4.8 && < 4.10
   , linear
   , opencv

  default-language: Haskell2010

executable munihac7
  main-is: munihac7.hs
  hs-source-dirs: src
  ghc-options: -Wall -O2

  build-depends:
     base >=4.8 && < 4.10
   , linear
   , opencv
   , transformers

  default-language: Haskell2010
