name:          opencv-examples
version:       0.0.0
homepage:      lumiguide.eu
license:       BSD3
author:        Roel van Dijk <roel@lambdacube.nl>, Bas van Dijk <v.dijk.bas@gmail.com>
maintainer:    Roel van Dijk <roel@lambdacube.nl>, Bas van Dijk <v.dijk.bas@gmail.com>
build-type:    Simple
cabal-version: >=1.10

extra-source-files:
    data/*.png
    data/*.jpg
    data/*.xml

library
  default-language: Haskell2010
  hs-source-dirs: lib
  exposed-modules:
    OpenCV.Example
  build-depends: base >=4.8 && < 4.10
               , opencv
               , temporary
               , bytestring
               , filepath
               , file-embed
               , template-haskell

executable highgui
  main-is: highgui.hs
  hs-source-dirs: src
  ghc-options: -Wall -O2

  build-depends: base >=4.8 && < 4.10
               , bytestring
               , opencv

  default-language: Haskell2010

executable videoio
  main-is: videoio.hs
  hs-source-dirs: src
  ghc-options: -Wall -O2

  build-depends: base >=4.8 && < 4.10
               , opencv

  default-language: Haskell2010

executable videoio-noise-multi
  main-is: videoio-noise-multi.hs
  hs-source-dirs: src
  ghc-options: -Wall -O2

  build-depends: base >=4.8 && < 4.10
               , opencv
               , opencv-examples
               , vector

  default-language: Haskell2010

executable videoio-decolor
  main-is: videoio-decolor.hs
  hs-source-dirs: src
  ghc-options: -Wall -O2

  build-depends: base >=4.8 && < 4.10
               , opencv
               , opencv-examples

  default-language: Haskell2010

executable videoio-background-sub
  main-is: videoio-background-sub.hs
  hs-source-dirs: src
  ghc-options: -Wall -O2

  build-depends: base >=4.8 && < 4.10
               , opencv
               , opencv-examples

  default-language: Haskell2010

executable face-detect
  main-is: face-detect.hs
  hs-source-dirs: src
  ghc-options: -Wall -O2

  build-depends: base >=4.8 && < 4.10
               , opencv
               , opencv-examples
               , linear
               , vector
               , transformers

  default-language: Haskell2010
